--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -191,8 +191,11 @@ main {
   font-family: "Bodoni FLF";
 }
 
-.btn {
+.link {
   margin-top: 27%;
+}
+
+.btn {
   color: #023a5e;
   font-size: 1.1rem;
   padding: 10px 17px;
@@ -202,4 +205,47 @@ main {
   font-weight: bold;
   border: none;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 2px;
+  cursor: pointer;
+}
+
+.btn-return {
+  font-size: 3rem;
+  position: absolute;
+  left: 10%;
+}
+
+.infoBox {
+  margin-top: 45%;
+  height: 140px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  text-shadow: rgba(0, 0, 0, 0.2) 3px 3px;
+}
+
+.infoBox h1 {
+  text-align: center;
+  font-weight: 100;
+}
+
+.sevenDayTable {
+  margin-top: 37%;
+  width: 90%;
+}
+
+.oneDayForecast {
+  width: 100%;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  text-shadow: rgba(0, 0, 0, 0.2) 3px 3px;
+}
+
+.oneDayForecast:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.oneDayForecast span:first-child {
+  width: 40%;
 }
